chore(typing): fix some typing issues & enable check in CI

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,8 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"astral-sh.ty"
+				"astral-sh.ty",
+				"tamasfe.even-better-toml"
 			]
 		}
 	}
