--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,12 @@ jobs:
     steps:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
       - uses: astral-sh/setup-uv@681c641aba71e4a1c380be3ab5e12ad51f415867 # v7.1.6
-      #- name: Ruff lint
-      #  run: uv run ruff check .
+      - name: Ruff lint
+        run: uv run ruff check . --output-format github
       - name: Ruff format
-        run: uvx ruff format --diff .
+        run: uv run ruff format --diff .
+      - name: Ty type check
+        run: uv run ty check src --output-format github
 
   test:
     name: Run tests
