--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,4 +37,16 @@ requires = ["uv_build>=0.9.18,<0.10.0"]
 build-backend = "uv_build"
 
 [dependency-groups]
-dev = ["pytest>=8.0.0"]
+dev = [
+    "pytest==8.0.0",
+    "ruff==0.14.10",
+    "ty==0.0.8",
+    "types-protobuf==6.32.1.20251210",
+]
+
+[tool.ruff]
+exclude = [
+  "examples", # Example code (enable eventually)
+  "src/arcjet/proto", # Generated code
+  "tests", # Test code (enable eventually)
+]
