--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ license = { text = "Apache-2.0" }
 dependencies = [
   "connect-python>=0.6.0",
   "httpx[http2]>=0.28.1",
-  "typeid-python>=0.3.3",
+  # Explaination of upper bound:
+  # https://github.com/arcjet/arcjet-py/issues/2
+  "typeid-python>=0.3.3,<0.3.7",
 ]
 classifiers = [
   "Programming Language :: Python :: 3",
