--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,3 +31,6 @@ jobs:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
       - uses: astral-sh/setup-uv@681c641aba71e4a1c380be3ab5e12ad51f415867 # v7.1.6
       - run: uv run pytest
+      # The tests/mocked test monkeypatch various internal SDK things and need
+      # to be isolated (read: run entirely seperately) from the other tests.
+      - run: uv run pytest tests/mocked
