--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ build-backend = "uv_build"
 dev = [
   "fastapi==0.128.0",                # For testing integration with FastAPI
   "flask==3.1.2",                    # For testing integration with Flask
+  "pyright==1.1.408",
   "pytest==9.0.2",
   "ruff==0.14.10",
   "ty==0.0.8",
@@ -76,6 +77,20 @@ exclude = [
 select = [
   "I", # Import formatting
 ]
+
+[tool.pyright]
+exclude = [
+  "tests/mocked/conftest.py",
+  "tests/mocked/test_cache.py",
+  "tests/mocked/test_client_sync.py",
+  "tests/mocked/test_context.py",
+  "tests/mocked/test_decision.py",
+  "tests/mocked/test_enums.py",
+  "tests/mocked/test_logging.py",
+  "tests/mocked/test_rules.py",
+]
+include = ["src", "tests"]
+pythonVersion = "3.10"
 
 [tool.ty.src]
 exclude = [
