--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,7 @@
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/python:2-3.10-trixie",
 	"features": {
-		"ghcr.io/devcontainers/features/common-utils:2.5.2": {},
+		// "ghcr.io/devcontainers/features/common-utils:2.5.2": {},
 		"ghcr.io/devcontainer-community/devcontainer-features/astral.sh-uv:1": {}
 	},
 	"customizations": {
