--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ build-backend = "uv_build"
 dev = [
   "fastapi==0.128.0",                # For testing integration with FastAPI
   "flask==3.1.2",                    # For testing integration with Flask
+  "griffe==1.15.0",
   "pyright==1.1.408",
   "pytest==9.0.2",
   "ruff==0.14.10",
