--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,12 @@ name: Test
 
 on:
   pull_request:
+    types:
+      - labeled
+      - opened
+      - reopened
+      - synchronize
+      - unlabeled
   merge_group: 
   push:
     branches:
@@ -13,6 +19,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+      - name: Fetch origin main # Griffe needs to compare against main branch
+        run: git fetch origin main
       - uses: astral-sh/setup-uv@681c641aba71e4a1c380be3ab5e12ad51f415867 # v7.1.6
       - name: Ruff lint
         run: uv run ruff check . --output-format github
@@ -22,6 +30,12 @@ jobs:
         run: uv run ty check --output-format github
       - name: Pyright type check
         run: uv run pyright
+      - name: Griffe check
+        # Only run on PRs and allow breaking changes to be merged with a label
+        if: github.event_name == 'pull_request'
+        continue-on-error: ${{ contains(github.event.pull_request.labels.*.name, 'breaking') }}
+        run: uv run griffe check arcjet --search src --format github --against origin/main
+
 
   test:
     name: Run tests
