--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ requires-python = ">=3.10"
 authors = [{ name = "Arcjet", email = "support@arcjet.com" }]
 license = { text = "Apache-2.0" }
 dependencies = [
-  "connect-python>=0.6.0",
+  # Pinned because 0.8.0 introduced breaking changes which we will address in a future release 
+  "connect-python>=0.6.0,<0.8.0",
   "httpx[http2]>=0.28.1",
   # Explaination of upper bound:
   # https://github.com/arcjet/arcjet-py/issues/2
